# PsyNotes

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: codeql.yml
android/: AndroidManifest.xml
android/res/values/: strings.xml
database/: convert_scripts.py  createDefaultValues.sql  database.fbs  example.db  initDatabase.sql  objectbox-model.json
database/scripts/: createEmotTable.sql  createNoteTable.sql  createNoteTextTable.sql  getFullNoteOnId.sql  getShortNotes.sql  insertDefaultValueEmot.sql  insertDefaultValueNote.sql  insertDefaultValueNoteText.sql  insertNewEmotTemplate.sql  insertNewNoteTemplate.sql  insertNewTextTemplate.sql  replaceNote.sql
headers/: constants.hpp  sqlscripts.hpp
headers/database/: database.obx.hpp  objectbox-model.h
headers/notestorage/: notestorage.h
ios/: Project-Info.plist
qml/: DiaryPage.qml  Main.qml  MainPage.qml  config.json
qml/logic/: Logic.qml
qml/model/: NoteModel.qml
qml/pages/: MainPage.qml
qml/pages/chat/: ChatPage.qml
qml/pages/diary/: AppTextArea.qml  DiaryPage.qml  EmotionLine.qml  EmotionSelector.qml  EmotionSelectorDynamic.qml  EmotionSpectrum.qml  EmotionState.qml  NotePage.qml
qml/pages/results/: ResultsPage.qml
qml/pages/tests/: TestsPage.qml
src/: main.cpp
src/database/: database.obx.cpp
src/notestorage/: notestorage.cpp
